# PanGu-Agent

./: .dockerignore  .gitignore  IDMAS_PRD_v1.1.md  main.py
docs/: IDMAS_MVP_开发任务清单.md  IDMAS_Requirements_v1.0.md  IDMAS_TechDesign_v1.0.md  IDMAS_TechDesign_v2.0.md  IDMAS_构建提示词.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  resources.ts
frontend/src/lib/: constants.ts  format.ts  logger.ts  useTheme.ts
frontend/src/mock/: data.ts
frontend/src/pages/: DrawingsPage.tsx  KnowledgePage.tsx  PLMPage.tsx  TasksPage.tsx  WorkbenchPage.tsx
idmas/: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt  worker.py
idmas/agents/: __init__.py
idmas/agents/design/: __init__.py  graph.py  nodes.py  state.py
idmas/agents/knowledge/: __init__.py  graph.py  nodes.py  state.py
idmas/agents/master/: __init__.py  graph.py  nodes.py  routes.py  state.py
idmas/agents/process/: __init__.py  graph.py  nodes.py  state.py
idmas/agents/report/: __init__.py  graph.py  nodes.py  state.py
idmas/agents/shared/: __init__.py  callbacks.py  retry.py  token_counter.py  tools.py
idmas/agents/vision/: __init__.py  graph.py  nodes.py  state.py
idmas/api/: __init__.py  app.py
idmas/api/middleware/: __init__.py  auth.py  error_handler.py  metrics.py  rate_limit.py
idmas/api/routes/: __init__.py  drawings.py  health.py  knowledge.py  logs.py  plm.py  tasks.py
idmas/api/schemas/: __init__.py  common.py  drawing.py  knowledge.py  plm.py  task.py
idmas/config/: __init__.py  settings.py
idmas/config/prompts/: __init__.py  debate_prompts.py  intent_prompts.py  report_prompts.py  vision_prompts.py
idmas/deploy/ansible/: .gitkeep
idmas/deploy/docker/: .env.example  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  prometheus.yml
idmas/deploy/helm/: .gitkeep
idmas/deploy/helm/idmas/: Chart.yaml  values.yaml
idmas/deploy/helm/idmas/templates/: NOTES.txt  _helpers.tpl  api.yaml  config.yaml  ingress.yaml  worker.yaml
idmas/deploy/k8s/: api-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  vllm-statefulset.yaml  worker-deployment.yaml
idmas/domain/: __init__.py
idmas/domain/analysis/: __init__.py  entities.py  repository.py  value_objects.py
idmas/domain/drawing/: __init__.py  entities.py  repository.py  value_objects.py
idmas/domain/knowledge/: __init__.py  entities.py  repository.py
idmas/domain/shared/: __init__.py  exceptions.py  value_objects.py
idmas/infrastructure/: __init__.py
idmas/infrastructure/adapters/: __init__.py  base.py  enovia.py  inteplm.py  teamcenter.py
idmas/infrastructure/cache/: __init__.py  base.py  checkpointer.py  redis_client.py
idmas/infrastructure/db/: __init__.py  mappers.py  memory_repositories.py  models.py  repositories.py  session.py
idmas/infrastructure/db/migrations/: __init__.py  env.py  script.py.mako
idmas/infrastructure/db/migrations/versions/: 938d5bd6c630_initial_schema.py
idmas/infrastructure/graphdb/: __init__.py  base.py  neo4j_client.py
idmas/infrastructure/llm/: __init__.py  deepseek_client.py  vllm_client.py
idmas/infrastructure/mq/: __init__.py  base.py  consumer.py  publisher.py
idmas/infrastructure/observability/: __init__.py  langfuse_handler.py  logging_config.py  metrics.py  tracing.py
idmas/infrastructure/ocr/: __init__.py  base.py  paddle_client.py
idmas/infrastructure/search/: __init__.py  base.py  es_client.py
idmas/infrastructure/storage/: __init__.py  base.py  minio_client.py
idmas/infrastructure/vectordb/: __init__.py  base.py  milvus_client.py
idmas/services/: __init__.py  plm_writeback.py  task_processor.py
idmas/tests/: __init__.py  conftest.py
idmas/tests/e2e/: __init__.py  test_full_flow.py
idmas/tests/fixtures/: __init__.py  sample_data.py
idmas/tests/integration/: __init__.py  test_api.py  test_cache_redis.py  test_db_repositories.py  test_graph.py  test_knowledge_api.py  test_knowledge_three_way.py  test_knowledge_vector.py  test_metrics_api.py  test_plm_api.py  test_rate_limit.py  test_storage_api.py  test_task_processor.py
idmas/tests/unit/: __init__.py  test_agents.py  test_auth.py  test_cache.py  test_deepseek_master_llm.py  test_domain.py  test_llm_factory.py  test_metrics.py  test_observability.py  test_ocr.py  test_plm_adapter.py  test_schemas.py  test_search_graph.py  test_shared_callbacks_tools.py  test_shared_prompts.py  test_storage.py  test_task_queue.py  test_vector_client.py
(+13 files in other folders)
