# =============================================================================
# IDMAS - 工业图纸智能解析多Agent协同系统
# 项目依赖与构建配置
#
# 核心框架: LangChain 0.3+ / LangGraph 0.3+
# Python版本: ^3.11
# =============================================================================

# [tool.poetry] 项目元数据
#   - name: idmas
#   - version: 0.1.0
#   - description: Industrial Drawing Multi-Agent System

# [tool.poetry.dependencies] 核心依赖
#   - langchain-core ~0.3.0        # LangChain核心
#   - langgraph ~0.3.0             # Agent编排框架
#   - langchain-openai ~0.3.0      # OpenAI兼容接口(vLLM)
#   - fastapi ~0.115.0             # Web框架
#   - uvicorn[standard] ~0.32.0    # ASGI服务器
#   - sqlalchemy[asyncio] ~2.0.0   # ORM
#   - asyncpg ~0.30.0              # PostgreSQL异步驱动
#   - redis ~5.0.0                 # Redis客户端
#   - pydantic ~2.9.0              # 数据校验
#   - httpx ~0.27.0                # HTTP客户端
#   - pymilvus ~2.4.0              # Milvus向量库
#   - neo4j ~5.25.0                # Neo4j图数据库
#   - elasticsearch ~8.15.0        # ES全文检索
#   - minio ~7.2.0                 # 对象存储
#   - aio-pika ~9.4.0              # RabbitMQ异步客户端
#   - opentelemetry-api ~1.27.0    # 可观测性
#   - langfuse ~2.50.0             # LLM可观测性

# [tool.poetry.group.dev.dependencies] 开发依赖
#   - pytest / pytest-asyncio      # 测试框架
#   - ruff                         # Linter + Formatter
#   - mypy                         # 类型检查
#   - bandit                       # 安全扫描
#   - pip-audit                    # 依赖漏洞扫描

# [tool.ruff] 代码风格配置
# [tool.mypy] 类型检查配置
# [tool.pytest.ini_options] 测试配置
