[tool.poetry]
name = "idmas"
version = "0.1.0"
description = "Industrial Drawing Multi-Agent System"
authors = ["IDMAS Team"]
packages = [{ include = "idmas", from = ".." }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic          = "~2.9.0"
pydantic-settings = "~2.5.0"
python-dotenv     = "~1.0.0"

# Web (第1步只需最小集，后续模块激活时按需增加)
fastapi    = { version = "~0.115.0", optional = true }
uvicorn    = { version = "~0.32.0",  extras = ["standard"], optional = true }

# DB (第3步激活)
sqlalchemy = { version = "~2.0.0", extras = ["asyncio"], optional = true }
asyncpg    = { version = "~0.30.0", optional = true }

# Redis (第3步激活)
redis = { version = "~5.0.0", optional = true }

# HTTP (第2步激活)
httpx = { version = "~0.27.0", optional = true }

# LangChain / LangGraph (第2步激活)
langchain-core   = { version = ">=0.3.0", optional = true }
langgraph        = { version = ">=0.3.0", optional = true }
langchain-openai = { version = ">=0.3.0", optional = true }

# 消息队列 / Worker (第4步激活)
aio-pika = { version = "~9.5", optional = true }

# 向量库 / 知识检索 (第5步激活)
pymilvus = { version = "~2.4", optional = true }

# 对象存储 (第6步激活)
minio = { version = "~7.2", optional = true }

# 知识图谱 / 全文检索 (第7步激活)
neo4j         = { version = "~5.24", optional = true }
elasticsearch = { version = "~8.15", optional = true }

# 注：PLM 适配器、OCR 复用 httpx（见上 http extra），无需额外依赖

[tool.poetry.extras]
web     = ["fastapi", "uvicorn"]
db      = ["sqlalchemy", "asyncpg", "redis"]
http    = ["httpx"]
llm     = ["langchain-core", "langgraph", "langchain-openai"]
mq      = ["aio-pika"]
vector  = ["pymilvus"]
storage = ["minio"]
graph   = ["neo4j"]
search  = ["elasticsearch"]
all     = ["fastapi", "uvicorn", "sqlalchemy", "asyncpg", "redis",
           "httpx", "langchain-core", "langgraph", "langchain-openai",
           "aio-pika", "pymilvus", "minio", "neo4j", "elasticsearch"]

[tool.poetry.group.dev.dependencies]
pytest         = "~8.3.0"
pytest-asyncio = "~0.24.0"
aiosqlite      = "~0.20.0"   # DB 仓储测试用的内存 SQLite 异步驱动
ruff           = "~0.7.0"
mypy           = "~1.13.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select  = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore  = ["E501"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
